--- a/webapp/src/main/webapp/themes/wilma/css/wilma.css
+++ b/webapp/src/main/webapp/themes/wilma/css/wilma.css
@@ -469,14 +469,23 @@ hr.formDivider {
 /* BRANDING ------>  */
 h1.vivo-logo {
     position: absolute;
-    width: 442px;
     height: 59px;
     top: 28px;
     left: 0;
     background: url(../images/VIVO-logo.png) 0 0 no-repeat;
     background-size: contain;
-    background-image: var(--logo-url, url(../images/VIVO-logo.png));
+    background-image: var(--logo-small-url, var(--logo-url, url(../images/VIVO-logo.png)));
+    max-width: 200px;
 }
+
+@media (min-width: 768px) {
+    h1.vivo-logo {
+        background-image: var(--logo-url, var(--logo-small-url, url(../images/VIVO-logo.png)));
+        width: 442px;
+        max-width: none;
+    }
+}
+
 h1.vivo-logo a {
     display: block;
     width: 386px;
