--- a/webapp/src/main/webapp/themes/nemo/css/theme.css
+++ b/webapp/src/main/webapp/themes/nemo/css/theme.css
@@ -295,3 +295,10 @@ These are helper classes to add margin gaps where needed
   align-items: center;
   gap: 5px;
 }
+
+.logoImgPreview {
+  max-width: 100%;
+  max-height: 50px;
+  object-fit: contain;
+  display: block;
+}
