Replace Qtip Library with Floating ui (#3937)
* fix: css for login width, inline form labels, site admin menu, data property control panel buttons

* Replaced Qtip with Popper and bootstrap

* Remove Qtip from ViSCommonControl is map of science

* Fixed popper for Vitro, Nemo and Tenderfoot themes

* Fixed tooltip design

* Moved the repeated inline style to the class

* Removed !important tags

* Removed !important in .show class

* Created tooltip css for everytheme to reduce reduntant code

* Refactored code

* Renaming vivoTooltip to vitroTooltip

* Removed bootstrap

* excluded bootstrap from popper

* Revert wilma changes

* Refactored code

* fix: Vitro theme bug

* Removed bootstrap 5 dependency

* Removed unrelated changes

* Migraiton popper to floating

* Fixed clipped qr code popover in tenderfoot theme

* Removed unnecessary css

* Reverted affix change

* fix: Fixed syntax error that caused nemo theme map of science not to work

* Fixed tooltips in map of science page

* fixes

---------

Co-authored-by: Georgy Litvinov <georgy.litvinov@tib.eu>

--- a/webapp/src/main/webapp/themes/nemo/css/layout.css
+++ b/webapp/src/main/webapp/themes/nemo/css/layout.css
@@ -34,8 +34,6 @@
 	padding-top:5px; 
 }
 
-#datatable_wrapper { display : none;}
-
 .subEntityTable {
 	width: 32%; 
 	padding-top:5px;
@@ -271,6 +269,11 @@ a.map-of-science-links {
     padding-right: 5px; 
     cursor: pointer;
     color: #2485AE;
+}
+
+.visCommonControllTooltip {
+    padding: 16px 22px;
+    max-width: 400px;
 }
 
 /* -------------------------------------------------------------->  */
