--- a/webapp/src/main/webapp/themes/wilma/css/wilma.css
+++ b/webapp/src/main/webapp/themes/wilma/css/wilma.css
@@ -121,60 +121,19 @@ h5 {
     /* margin-top: var(--bs-gutter-y); */
   }
 
-.col-1 {
-    flex: 0 0 auto;
-    width: 8.33333333%;
-}
 
-.col-2 {
-    flex: 0 0 auto;
-    width: 16.66666667%;
-}
 
-.col-3 {
-    flex: 0 0 auto;
-    width: 25%;
-}
 
-.col-4 {
-    flex: 0 0 auto;
-    width: 33.33333333%;
-}
 
-.col-5 {
-    flex: 0 0 auto;
-    width: 41.66666667%;
-}
 
-.col-6 {
-    flex: 0 0 auto;
-    width: 50%;
-}
 
-.col-7 {
-    flex: 0 0 auto;
-    width: 58.33333333%;
-}
+
 
 .col-8 {
     flex: 0 0 auto;
     width: 66.66666667%;
 }
 
-.col-9 {
-    flex: 0 0 auto;
-    width: 75%;
-}
-
-.col-10 {
-    flex: 0 0 auto;
-    width: 83.33333333%;
-}
-
-.col-11 {
-    flex: 0 0 auto;
-    width: 91.66666667%;
-}
 
 .col-12 {
     flex: 0 0 auto;
@@ -183,19 +142,6 @@ h5 {
 
 
 @media (min-width: 768px) {
-    .col-md {
-      flex: 1 0 0%;
-    }
-  
-    .col-md-auto {
-      flex: 0 0 auto;
-      width: auto;
-    }
-  
-    .col-md-1 {
-      flex: 0 0 auto;
-      width: 8.33333333%;
-    }
   
     .col-md-2 {
       flex: 0 0 auto;
@@ -236,17 +182,7 @@ h5 {
       flex: 0 0 auto;
       width: 75%;
     }
-  
-    .col-md-10 {
-      flex: 0 0 auto;
-      width: 83.33333333%;
-    }
-  
-    .col-md-11 {
-      flex: 0 0 auto;
-      width: 91.66666667%;
-    }
-  
+
     .col-md-12 {
       flex: 0 0 auto;
       width: 100%;
@@ -254,7 +190,7 @@ h5 {
 }
 
 @media (min-width: 970px) {
-    .container-xl, .container-lg, .container-md, .container-sm, .container {
+    .container {
         max-width: 970px;
     }
 }
