--- a/webapp/src/main/webapp/themes/tenderfoot/css/tenderfoot.css
+++ b/webapp/src/main/webapp/themes/tenderfoot/css/tenderfoot.css
@@ -294,7 +294,7 @@ h1.vivo-logo {
 
 @media (min-width: 768px) {
     h1.vivo-logo {
-        background-image: var(--logo-url, var(--logo-small-url, url(../images/VIVO-logo.png)));
+        background-image: var(--logo-url, url(../images/VIVO-logo.png));
         max-width: none;
     }
 }
