--- a/webapp/src/main/webapp/css/visualization/capabilitymap/graph.css
+++ b/webapp/src/main/webapp/css/visualization/capabilitymap/graph.css
@@ -285,7 +285,7 @@ hr {
 .tabs ul.titles {
     list-style: none;
     height:30px;
-    color: #5e6363;
+    color: var(--text-color, #5E6363);
     font-size: 13px;
 }
 .tabs ul.titles li a {
@@ -299,7 +299,7 @@ hr {
     height:30px;
     line-height:30px;
     text-align:center;
-    color: #5e6363;
+    color: var(--text-color, #5E6363);
 }
 
 .tabs ul.titles li a:hover {
